# ugh3-metrics-lib

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  AUTOMATION_SPECS.md  CANONICAL_COMPATIBILITY.md  CHANGES.md  CLAUDE.md  LICENSE  Makefile  README.md  SECL_SPECIFICATIONS.md  config.json  config.yaml  deltae_scoring.py  design_sketch.py  fix-metrics.patch  fix1.patch  generate_questions.py  grv_scoring.py  history_evaluator.py  mypy.ini  phase_map_demo.py  por_deltae_grv_collector.py  por_history.csv  por_trigger.py  pyproject.toml  questions.txt  report.xml  requirements.txt  safe_chat.txt  secl_qa_cycle.py  spec.md  tmp_block.txt  warm_cache.py
config/: grv.yaml
core/: __init__.py  delta_e_v4.py  deltae.py  deltae_v2.py  grv.py  grv_v4.py  history.py  history_entry.py  metrics.py  por_v4.py  sci.py  stats.py
data/: jp_stop.txt  por_history_20240523.csv  por_history_20250523_0043.csv
dataset/: 20250611.jsonl  20250612.jsonl  20250613.jsonl  20250614.jsonl  20250615.jsonl  20250616.jsonl  20250617.jsonl  20250618.jsonl  20250619.jsonl  20250620.jsonl  20250621.jsonl  20250622.jsonl  20250623.jsonl  20250624.jsonl  20250625.jsonl  20250626.jsonl  20250627.jsonl  20250628.jsonl  20250629.jsonl  20250630.jsonl  20250701.jsonl  20250702.jsonl  20250703.jsonl  20250704.jsonl  20250711.jsonl  20250712.jsonl  20250713.jsonl  20250714.jsonl  20250715.jsonl  20250716.jsonl
datasets/: 20250612.jsonl  20250615.jsonl  20250616.jsonl  20250617.jsonl  20250618.jsonl  20250619.jsonl  20250621.jsonl  20250622.jsonl  20250624.jsonl  20250626.jsonl  20250627.jsonl  20250629.jsonl  20250701.jsonl  20250702.jsonl  20250712.jsonl  20250714.jsonl  20250715.jsonl  20250716.jsonl  20250717.jsonl  20250718.jsonl  20250719.jsonl  20250720.jsonl  20250721.jsonl  20250722.jsonl  20250723.jsonl  20250724.jsonl  20250725.jsonl  20250726.jsonl  20250727.jsonl  20250728.jsonl  20250729.jsonl
docs/: metrics.md
examples/: VisualizationDemo.ipynb  phase_map_heatmap.py  phase_map_heatmap_example.py  sample_data.csv  ugh3_metrics_demo.ipynb  visualize_tensor.py  visualize_tensor_example.py
facade/: __init__.py  collector.py  metrics.py  secl_hook.py  trigger.py
guard/: AGENTS.md
models/: run_inference.py
scripts/: ai_issue_codegen.py  analyze_dataset.py  audit_workflows.py  auto_analysis.py  auto_fix_until_green.sh  auto_score.py  build_dataset.py  check_deltae_zero.py  classify_domain.py  csv_to_jsonl.py  detect_and_purge_zero_deltae.py  detect_duplicates.py  evaluate_dataset.py  extract_metrics.py  merge_to_dataset.py  openai_code_generator.py  pr_to_issue_sync.py  progress_tracker.py  prune_and_pr.py  recalc_deltae.py  recalc_scores_v4.py  review_processor.py  scrape_docs.py  update_readme.py
secl/: __init__.py  api.py  qa_cycle.py
tests/: conftest.py  (+55 more)
(+68 files in other folders)
