[project]
name = "por-deltae-lib"
version = "0.1.0"
description = "PoR・ΔE OSS reference implementation"
authors = [
  { name = "Yuu6798", email = "kkoo6798@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24,<2.0",
]

[project.optional-dependencies.dev]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["secl*", "core*", "facade*", "ugh3_metrics*"]
exclude = ["tests*", "images*", "datasets*", "stubs*"]
